2015-06-03  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-219

	* src/CMakeLists.txt, CMakeLists.txt:

	Fix bug in BLAS detection reported by jana. Cmake did not fail when
	the required BLAS library wasn't found. Instead compilation failed
	trying to link against -lOFF.
	Moved code from src/ to toplevel CMakeLists.txt file and changed
	detection code to be consistent with other libraries.

	* README: Added blas to required dependencies.

2015-06-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-218

	* src/m_rte.cc (iyCalc, yCalc_mblock_loop_body): Changed asserts
	in last commit into runtime errors.

2015-06-02  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-217

	* src/m_rte.cc (iyCalc, yCalc_mblock_loop_body): iy resp. y now
	asserted to not contain any NaN.

2015-06-02  Jana Mendrok  <jana.mendrok@ltu.se>

	* arts-2-3-216

	* src/m_jacobian.cc (jacobianDoit):
	Skip DOIT calculation if effective perturbation is 0 (happens for rel
	perturbations if x_ref==0) and set respective jacobians directly to 0.

2015-06-01 Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-215

	* src/zeeman.cc:  Fixed bug reported by Patrick about source 
	functions.  For now the only test that fails when WithSource
	is active in Init is ycalcappend.TestYCalcAppend.  Note that
	this does not mean that most tests even use the source.
	
	Big fixme remaining:  The agenda checking must change so that
	we enforce InitWithSource in both the relevant agendas.

2015-06-01  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-214

	* src/m_rte.cc (iyEmissionStandard): Had missed the factor 0.5
	when calculating absbar and extbar.

	* src/rte.cc (emission_rtstep): Complete code for non-LTE now in
	place. But lack proper tests to be totally sure that all OK.

2015-06-01  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-213

	* src/m_basic_types.cc (Compare): NaNs now handled. NaN compared