@@ -141,6 +141,11 @@ include (FindZLIB)
 set (ENABLE_ZLIB ${ZLIB_FOUND})
 
 ########## BLAS support #########
+if (${CMAKE_VERSION} VERSION_LESS "2.8.8")
+  # Workaround: Older versions of cmake
+  # rely on fortran being enabled to detect BLAS
+  enable_language (Fortran)
+endif()
 include (FindBLAS)
 if (NOT BLAS_FOUND)
   message (FATAL_ERROR "No BLAS library found. Please install it.")
